randomize the first parkour